syntax = "proto3";

package internalserver;

option go_package = "./server/internal/proto;internalserver"; 

service InternalService {
  rpc CreateBucket(CreateBucketReq) returns (CreateBucketResp);
}

message CreateBucketReq {
    string topic = 1;
    string bucket = 2;
}

message CreateBucketResp {
    bool success = 1;
}